--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <h1>GIT</h1>
 
 <body>
-
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam facere in commodi modi, aut officiis. Vero
+        explicabo placeat pariatur, provident aliquam nemo sint in, harum unde exercitationem facilis nobis eveniet.</p>
 </body>
 
 </html>
